# fulcrum

./: .bazelignore  .gitignore  .prettierignore  CONTRIBUTING.md  GEMINI.md  MODULE.bazel  PROGRESS.md  QWEN.md  README.md  TESTING_NOTE.md  bazel-bin  bazel-fulcrum  bazel-out  bazel-testlogs  check_i18n_consistency.py  diff.txt  docker-compose.bazel.yml  docker-compose.test.yml  docker-compose.yml  find_json_duplicates.py  package-lock.json  package.json  playwright.config.ts  test_output.txt  test_output_2.txt  test_output_3.txt  test_output_4.txt  test_output_5.txt  test_output_6.txt  test_output_7.txt
backend/image/: BUILD.bazel
backend/src/: BUILD.bazel  celery_worker.py  config.py  database.py  main.py  tasks.py
backend/src/api/: custom_fields.py  dependencies.py  products.py  suppliers.py
backend/src/core/: encryption.py  errors.py  ratelimit.py  security.py
backend/src/crud/: __init__.py  base.py  crud_address.py  crud_alert.py  crud_custom_field.py  crud_custom_field_template.py  crud_expense.py  crud_expense_receipt.py  crud_marketing.py  crud_marketplace.py  crud_marketplace_credential.py  crud_password_reset_token.py  crud_payment.py  crud_product.py  crud_product_image.py  crud_product_inventory_settings.py  crud_product_template.py  crud_product_variant.py  crud_purchase_order.py  crud_stock_transfer.py  crud_store_settings.py  crud_supplier.py  crud_supplier_invoice.py  crud_supplier_product.py  crud_supplier_product_alias.py  crud_user.py  crud_user_audit_log.py
backend/src/models/: __init__.py  address.py  alert.py  api_key.py  catalog_import.py  custom_field.py  custom_field_template.py  expense.py  expense_receipt.py  import_template.py  inventory.py  marketing.py  marketplace.py  order.py  password_reset_token.py  payment.py  pending_sync.py  product.py  product_inventory_settings.py  product_template.py  product_variant.py  purchase_order.py  purchase_order_item.py  stock_transfer.py  store_settings.py  supplier.py  supplier_document_import.py  supplier_invoice.py  supplier_product.py  supplier_product_alias.py  user.py  user_audit_log.py
backend/src/schemas/: __init__.py  address.py  alert.py  audit_log.py  custom_field.py  expense.py  expense_receipt.py  inventory.py  marketing.py  marketplace.py  marketplace_credential.py  marketplace_health.py  pagination.py  password_reset.py  payment.py  product.py  product_inventory_settings.py  product_template.py  product_variant.py  purchase_order.py  sales_order.py  stock_transfer.py  store_settings.py  supplier.py  supplier_invoice.py  supplier_product.py  supplier_product_alias.py  user.py  user_audit_log.py  webhook.py
backend/src/scripts/: seed_full.py  seed_products_images.py  update_barcodes.py
backend/src/services/: ai_service.py  alert_evaluation_service.py  amazon_order_ingestion.py  barcode_service.py  base.py  catalog_ingestion_service.py  change_log.py  dummy_ai_service.py  email_service.py  inbound_shipment_reconciliation.py  inventory_service.py  marketplace_health_service.py  marketplace_listing_service.py  marketplace_service.py  mercado_pago.py  mercadolibre_order_ingestion.py  order_cost_engine.py  order_lifecycle.py  purchase_order_ingestion_service.py  purchase_order_service.py  report_export.py  settlement_fee_ingestion.py  stock_transfer_service.py
backend/src/tasks/: marketplace.py
backend/tests/: BUILD.bazel  conftest.py  test_adk_integration.py  test_adk_tools.py  test_ai_api.py  test_alerts_api.py  test_audit_logging.py  test_audit_logs_api.py  test_bulk_users.py  test_bundle_assembly.py  test_bundles.py  test_catalog_imports.py  test_cost_rollup_api.py  test_cost_rollup_track2_api.py  test_cost_updates.py  test_crud.py  test_dead_stock_api.py  test_edge_cases.py  test_expenses.py  test_fast_dummy.py  test_force_password_change.py  test_inventory_snapshot_export.py  test_invoice_parser.py  test_landed_cost.py  test_list_exports.py  test_low_stock_export.py  test_low_stock_reorder.py  test_low_stock_report.py  test_marketplace_api.py  test_marketplace_fee_config_api.py  test_marketplace_health_api.py  test_mercadolibre_webhook_e2e.py  test_onboarding_api.py  test_payments_api.py  test_po_crud.py  test_po_deletion.py  test_product_history.py  test_products_api.py  test_products_stock_adjustment.py  test_purchase_orders_api.py  (+17 more)
backend/tests/core/: test_encryption.py  test_errors.py
backend/tests/crud/: test_marketplace_credential.py
backend/tests/integration/: test_amazon_live.py  test_mercadolibre_live.py  test_po_bug.py
backend/tests/services/: test_alert_evaluation.py  test_amazon_connector.py  test_amazon_inbound_reconciliation.py  test_amazon_order_ingestion.py  test_inbound_shipment_reconciliation.py  test_inventory_service_velocity.py  test_marketplace_listing_service.py  test_marketplace_service.py  test_marketplace_service_reauth.py  test_marketplace_service_retry.py  test_mercado_pago_connector.py  test_mercadolibre_connector.py  test_mercadolibre_order_ingestion.py  test_ml_inbound_shipment.py  test_order_cost_engine.py  test_order_lifecycle.py  test_po_ingestion.py  test_settlement_fee_ingestion.py  test_stock_transfer_marketplace.py  test_stock_transfer_planner.py  test_stock_transfer_service.py
frontend/: .gitignore  BUILD.bazel  README.md  angular.json  final_final_test_output.txt  final_test_output.txt  golden_test_output.txt  karma.conf.js  package-lock.json  package.json  pnpm-lock.yaml  proxy.conf.json  test_output.txt  test_output_2.txt  test_output_3.txt  test_success.txt  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  verification_output.txt  vitest.config.ts  web-test-runner.config.mjs
frontend/image/: BUILD.bazel  default.conf  nginx.conf
frontend/patches/: sass@1.77.8.patch
frontend/public/: manifest.webmanifest
frontend/src/: index.html  main.ts  styles.scss  test-setup.ts
frontend/src/app/: app-module.ts  app-routing-module.ts  app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.html  app.module.ts  app.spec.ts  app.ts  transloco-root.module.ts
(+1017 files in other folders)
