load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//frontend:@angular/cli/package_json.bzl", "bin")

npm_link_all_packages(name = "node_modules")

bin.ng(
    name = "build",
    srcs = glob([
        "src/**/*",
    ]) + [
        "angular.json",
        "tsconfig.app.json",
        "tsconfig.json",
        "package.json",
        ":node_modules",
    ],
    args = [
        "build",
        "--output-path=dist/frontend",
        "--preserve-symlinks",
    ],
    out_dirs = ["dist/frontend"],
    chdir = "frontend",
    visibility = ["//visibility:public"],
)

bin.ng_test(
    name = "test",
    data = glob([
        "src/**/*",
    ]) + [
        "angular.json",
        "tsconfig.spec.json",
        "tsconfig.json",
        "package.json",
        ":node_modules",
    ],
    args = [
        "test",
        "--include=**/bulk-import.service.spec.ts",
    ],
    timeout = "long",
    chdir = "frontend",
    env = {
        "NODE_PRESERVE_SYMLINKS": "1",
    },
    tags = ["requires-network", "manual"],
    visibility = ["//visibility:public"],
)

exports_files([
    "pnpm-lock.yaml",
    "package.json",
])
