load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# Package the Angular build output
pkg_tar(
    name = "app_layer",
    srcs = ["//frontend:build"],
    package_dir = "/usr/share/nginx/html",
)

# Package the nginx configuration
pkg_tar(
    name = "config_layer",
    srcs = ["default.conf"],
    package_dir = "/etc/nginx/conf.d",
)

# Create the OCI image
oci_image(
    name = "frontend_image",
    base = "@nginx_base",
    tars = [
        ":app_layer",
        ":config_layer",
    ],
    exposed_ports = ["80/tcp"],
)

# Load into Docker daemon
oci_load(
    name = "frontend_tarball",
    image = ":frontend_image",
    repo_tags = ["fulcrum/frontend:latest"],
)
